--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sa7abox",
+  "name": "@findmalek/sa7abox",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@formatjs/intl-localematcher": "^0.7.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "negotiator": "^1.0.0",
     "next": "16.1.1",
+    "next-intl": "^4.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "shadcn": "^3.6.3",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
