--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "pnpm db:generate && next build",
 		"start": "next start",
 		"lint": "biome lint --write .",
-		"format": "biome format --write ."
-	},
+		"format": "biome format --write .",
+		"db:generate": "prisma generate",
+		"db:push": "prisma db push",
+		"db:migrate": "prisma migrate dev",
+		"db:studio": "prisma studio"
+	  },
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
 		"@formatjs/intl-localematcher": "^0.7.5",
+		"@prisma/client": "^7.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -36,6 +41,7 @@
 		"zustand": "^5.0.10"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.3.5",
 		"@tailwindcss/postcss": "^4",
 		"@types/negotiator": "^0.6.4",
 		"@types/node": "^20",
@@ -43,8 +49,8 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "16.1.1",
+		"prisma": "^7.2.0",
 		"tailwindcss": "^4",
-		"typescript": "^5",
-		"@biomejs/biome": "^2.3.5"
+		"typescript": "^5"
 	}
 }
