--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 		"db:push": "prisma db push",
 		"db:migrate": "prisma migrate dev",
 		"db:studio": "prisma studio"
-	  },
+	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
 		"@formatjs/intl-localematcher": "^0.7.5",
+		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -28,6 +29,7 @@
 		"next": "16.1.1",
 		"next-intl": "^4.7.0",
 		"next-themes": "^0.4.6",
+		"pg": "^8.17.1",
 		"react": "19.2.3",
 		"react-day-picker": "^9.13.0",
 		"react-dom": "19.2.3",
@@ -45,6 +47,7 @@
 		"@tailwindcss/postcss": "^4",
 		"@types/negotiator": "^0.6.4",
 		"@types/node": "^20",
+		"@types/pg": "^8.16.0",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
