feat: added 'ratelimit'

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/sa7abox?schema=public"
 TELEGRAM_BOT_TOKEN=your_bot_token_here
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
